# AIQualityKit

./: .gitignore  README.md  plan.md  pyproject.toml  test_chatanywhere_api.py
app/: main.py
app/logic/: citation_analyzer_async.py  citation_analyzer_fulltext.py  citation_analyzer_sliced.py  citation_analyzer_sync.py  citation_processor.py  hallucination_detector_simplified.py  internal_consistency_detector.py  json_rank_sorter.py
app/utils/: __init__.py  api_client.py  token_counter.py
data/output/results/: citation_analysis_from_10_count_10_async_results.json  citation_analysis_from_43_count_6_async_results.json  citation_analysis_rank_43_sync_results.json  qwen_all_results.json  qwen_all_results_async.json  qwen_consistency_results.json  qwen_consistency_results_async.json  qwen_inconsistency_results.json  qwen_inconsistency_results_async.json  web_analysis_fulltext_all_20250829_140829.json  web_analysis_fulltext_all_20250829_142123.json  web_analysis_fulltext_all_20250829_142516.json  web_analysis_fulltext_all_20250829_143439.json  web_analysis_fulltext_all_20250829_143827.json  web_analysis_fulltext_specific_20250829_144329.json  web_analysis_fulltext_specific_20250829_144909.json  web_analysis_fulltext_specific_20250829_181645.json  web_analysis_fulltext_specific_20250829_181745.json  web_analysis_fulltext_specific_20250829_184645.json  web_analysis_fulltext_specific_20250829_184935.json  web_analysis_fulltext_specific_20250829_225022.json  web_analysis_fulltext_specific_20250829_225642.json  (+2 more)
static/: index.html  script.js  styles.css
