[project]
name = "AIQualityKit"
version = "0.1.0"
description = "A toolset for evaluating the quality of AI-generated content, including citation analysis, consistency checks, and hallucination detection."
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pandas",
    "openpyxl",
    "aiohttp",
    "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]